# benchmarks

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: benchmark.cmake  gtest.cmake
sgemm/: Makefile.Linux  sgemm-plot.py  sgemm_omp.cc
src/: CMakeLists.txt
src/memcpy/: CMakeLists.txt  memcopy.cpp  memcopy.h
src/memcpy/test/: CMakeLists.txt  test_basic.cpp  test_memcopy.cpp
src/sgemm/: Makefile.OSX  sgemm_omp.cc
src/stream/: Makefile.Linux  stream-plots.py  stream_triad_omp.cc
stream/: Makefile.OSX  README.md  README.md~  stream_triad_omp.cc
